# cancerag

./: .coveragerc  .cursorrules  .dockerignore  .gcloudignore  .gitignore  DEPLOYMENT_SUMMARY.md  DOCKING_FIX_SUMMARY.md  Dockerfile  README.md  cloudbuild.yaml  create_sample_dataset.py  deploy_cloudrun.sh  download_alphafold_structures.py  pdb_visualizer.py  pyproject.toml  pytest.ini  render.yaml  requirements.txt
__marimo__/session/: pdb_visualizer.py.json
configs/: config.yaml  config_fast.yaml
data/interim/: ligands_for_docking.sdf
data/pdb/: summary.json
data/processed/: binding_sites.json
data/processed/ml_preprocessed/: label_encoder.pkl  scaler.pkl  (+1 more)
data/raw/: biasdb_data.csv
docs/: methodology_documentation.md  pipeline_sequence_diagram.md  pipeline_statistics_summary.md  simple_flow_diagram.txt
improvements/: 00_overview.md  01_data_collection.md  02_ligand_curation.md  03_receptor_curation.md  04_binding_site_definition.md  05_docking.md  06_featurization.md  07_dataset_assembly.md  08_ml_preprocessing.md  09_feature_selection.md  10_model_training_eval.md  11_interpretability.md  12_inference_deployment.md  CURATION_JOURNEY.md  PHASE_06_ADVANCED_CHECKPOINT.md  README.md  STAGE_05_CHECKPOINT.md  STAGE_07_TO_11_CHECKPOINT.md  TRACKING_STAGE_01.md  TRACKING_STAGE_02.md  TRACKING_STAGE_03.md  TRACKING_STAGE_04.md  TRACKING_STAGE_05.md  TRACKING_STAGE_06.md  TRACKING_STAGE_07.md  TRACKING_STAGE_08.md  TRACKING_STAGE_09.md  TRACKING_STAGE_10.md  TRACKING_STAGE_11.md  TRACKING_STAGE_12.md
inference_app/: .dockerignore  DEPLOYMENT_FIXES_SUMMARY.md  DOCKER_DEPLOYMENT.md  DOCKING_FIX.md  Dockerfile  Makefile  README.md  RENDER_DEPLOYMENT.md  UI_IMPROVEMENT_PLAN.md  app.py  docker-compose.yml  docker-run.sh  pyproject.toml  requirements.txt  test_docking_fix.py  test_inference.py
inference_app/src/: __init__.py  docking_extractor.py  feature_extractor.py  inference_pipeline.py  molecular_visualizer.py  molecule_processor.py  predictor.py  receptor_manager.py  receptor_processor.py  result_visualizer.py
notebooks/: chembl-analysis.ipynb  chembl_retrieval.py  download_pdb.py  molecule_preprocessor.py  new_er_docking_ready.sdf  sorted_molecule_info.csv  vina_docking.py
results/models/: logistic_regression.pkl  xgboost.pkl
results/reports/: evaluation_results.json  final_improvement_report.txt  final_results_summary.md  ml_pipeline_summary.json  model_comparison_summary.csv  training_results.json
scripts/: chembl_molecule_retriever.py  download_receptors.py  prepare_deployment_receptors.py
src/cancerag/: main.py
src/cancerag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: __init__.py  conftest.py
tests/unit/: __init__.py  test_active_site_identifier.py  test_alphafold_fetcher.py  test_analysis.py  test_biasdb_retriever.py  test_binding_site.py  test_chembl_retriever.py  test_clustering.py  test_dataset_assembly.py  test_feature_parity.py  test_feature_selection.py  test_generate_final_report.py  test_gnina_rescore.py  test_het_resnames.py  test_ligand_preprocessor.py  test_model_evaluation.py  test_model_training.py  test_molecular_descriptors.py  test_pdb_selector.py  test_pocket_predictors.py  test_predictor.py  test_preprocessing.py  test_production_docking.py  test_provenance.py  test_receptor_preprocessor.py  test_receptor_retriever.py  test_redock_validation.py  test_registry.py  test_runner.py  test_schemas.py
(+72 files in other folders)
