[tool.poetry]
name = "cancerag"
version = "0.1.0"
description = ""
authors = ["Halleluyah Oludele <halleluyaholudele@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
black = "^25.1.0"
rdkit = "^2024.9.4"
pandas = "^2.2.3"
numpy = "^2.2.2"
scikit-learn = "^1.6.1"
xmltodict = "^0.14.2"
chembl-webresource-client = "^0.10.9"
tqdm = "^4.67.1"
biopython = "^1.85"
biotite = "^1.1.0"
marimo = "^0.11.12"
vina = "^1.2.7"
jupyter = "^1.1.1"
nglview = "^3.1.4"
py3dmol = "^2.4.2"
ipywidgets = "^8.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
