[project]
name = "cancerag"
version = "0.1.0"
description = "This is a pipeline for identifying biased agonists"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "biopython>=1.85",
    "biotite>=1.4.0",
    "black>=25.1.0",
    "chembl-webresource-client>=0.10.9",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "nglview>=3.1.4",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "py3dmol>=2.5.2",
    "rdkit>=2025.3.6",
    "scikit-learn>=1.7.2",
    "scipy>=1.11.0",
    "seaborn>=0.13.2",
    "matplotlib>=3.10.2",
    "tqdm>=4.67.1",
    "xmltodict>=1.0.0",
    "ruff>=0.13.2",
    "rich>=14.1.0",
    "plotly>=6.3.1",
    "pyyaml>=6.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "shap>=0.44.0",
    "pydantic>=2.0.0",
    "openpyxl>=3.1.0",
    "umap-learn>=0.5.0",
    "tenacity>=9.1.2",
    "gradio>=5.49.1",
    "streamlit>=1.51.0",
    "boruta>=0.4.3",
    "gradio-molecule3d>=0.0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pylint>=3.0.0",
    "mypy>=1.8.0",
    "bandit>=1.7.0",
    "radon>=6.0.0",
    "safety>=3.0.0",
]
ml = [
    "catboost>=1.2.0",
    "boruta>=0.3.0",
    "optuna>=3.5.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "myst-parser>=2.0.0",
]
dashboard = [
    "streamlit>=1.31.0",
    "dash>=2.14.0",
]
